ingress/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
  annotations:
   kubernetes.io/ingress.class: "nginx"
   ingress.kubernetes.io/ssl-redirect: "false"
   nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
     paths:
     - path: /
       pathType: Prefix
       backend:
        service: 
         name: jenkins
         port:
          number: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
 labels:
  app: jenkins
 name: jenkins
spec:
  selector:
   matchLabels:
    app: jenkins
    type: master
    service: jenkins
  strategy: 
   type: Recreate
  template:
   metadata:
    labels:
     app: jenkins
     type: master
     service: jenkins
   spec:
    containers:
    - name: jenkins
      image: jenkins/jenkins
      resources: {}
status: {}

---

apiVersion: v1
kind: Service
metadata:
 labels: 
  app: jenkins
 name: jenkins
spec:
 ports:
 - port: 8080
   protocol: TCP
   targetPort: 8080
 selector:
  app: jenkins
  service: jenkins
 type: ClusterIP
status:
 loadBalancer: {}
